# eVibes

./: .dockerignore  .env.example  .gitattributes  .gitignore  CODEOWNERS  Dockerfile  Dockerfile.app  Dockerfile.storefront  LICENSE  README.md  docker-compose.yml  manage.py  nginx  pyproject.toml  ruff.toml
blog/: admin.py  apps.py  filters.py  forms.py  models.py  serializers.py  urls.py  viewsets.py  widgets.py
blog/elasticsearch/: documents.py
blog/graphene/: object_types.py
blog/migrations/: 0001_initial.py  0002_alter_post_slug_alter_post_title.py  0003_alter_post_tags.py
core/: abstract.py  admin.py  api_urls.py  apps.py  b2b_urls.py  choices.py  errors.py  filters.py  forms.py  managers.py  models.py  object_types.py  permissions.py  schema.py  serializers.py  signals.py  sitemaps.py  tasks.py  translation.py  urls.py  validators.py  views.py  viewsets.py  widgets.py
core/data/: initial_categories.json  payment_methods.json
core/docs/drf/: views.py  viewsets.py
core/elasticsearch/: __init__.py  documents.py
core/graphene/: __init__.py  mutations.py  object_types.py  schema.py
core/management/commands/: await_services.py  clear_unwanted.py  create_categories.py  deepl_translate.py  fetch_products.py  populate_slugs.py  purify_translated.py  set_default_caches.py  (+1 more)
core/migrations/: 0001_initial.py  0002_initial.py  0003_alter_attribute_name_alter_attribute_name_ar_ar_and_more.py  0003_initial.py  0004_alter_product_name_alter_product_name_ar_ar_and_more.py  0004_orderproduct_attributes_alter_productimage_image_and_more.py  0005_alter_productimage_image.py  0005_remove_brand_category_brand_categories.py  0006_alter_order_status.py  0007_alter_category_image.py  0008_digitalassetdownload.py  0009_documentary.py  0010_product_partnumber.py  0011_brand_big_logo_brand_description_and_more.py  0012_alter_order_user.py  0013_product_slug.py  0014_alter_product_slug.py  0015_alter_product_slug.py  0016_alter_product_slug.py  0017_order_human_readable_id.py  0018_alter_order_human_readable_id.py  0019_address.py  0019_alter_order_human_readable_id.py  0020_order_billing_address_order_shipping_address.py  0021_rename_name_ar_ar_attribute_name_ar_ar_and_more.py  0022_category_slug.py  0023_address_address_line.py
core/serializers/: __init__.py  detail.py  simple.py
core/static/: maintenance.html  robots_frontend.txt
core/templates/: contact_us_email.html  digital_order_created_email.html  digital_order_delivered_email.html  json_table_widget.html  order_created_email.html  shipped_order_delivered_email.html
core/templatetags/: conditions.py  filters.py
core/utils/: __init__.py  caching.py  constance.py  db.py  email.py  emailing.py  languages.py  lists.py  messages.py  nominatim.py  promotions.py  security.py  teemill.py
core/vendors/: __init__.py
evibes/: __init__.py  api_urls.py  asgi.py  b2b_urls.py  celery.py  hosts.py  middleware.py  pagination.py  signal_processors.py  urls.py  wsgi.py
evibes/settings/: __init__.py  base.py  caches.py  celery.py  constance.py  csp.py  database.py  dbbackup.py  drf.py  elasticsearch.py  email.py  emailing.py  extensions.py  graphene.py  jazzmin.py  logconfig.py  logging.py  parler.py
evibes/utils/: __init__.py  misc.py
geo/: admin.py  apps.py  conf.py  filters.py  managers.py  models.py  object_types.py  schema.py  serializers.py  urls.py  util.py  viewsets.py
geo/data/: admin2Codes.txt  countryInfo.txt
geo/graphene/: mutations.py  object_types.py
geo/migrations/: 0001_initial.py  0002_alter_address_api_response_alter_address_location_and_more.py  0002_continent_models_and_foreign_keys.py  0002_initial.py  0003_add_district_field.py  0003_add_verbose_name_and_related_names.py  0004_add_missing_fields.py  0004_rename_languages_to_language_codes.py  0005_add_foreignkeys_to_postalcode.py  0006_typify_alt_names_and_add_is_historic.py  0007_add_currency_and_postal_code_fields_to_country_model.py  0008_add_code_to_district.py  0009_add_slug_fields_to_models.py  0010_adjust_unique_attributes.py  0011_auto_20180108_0706.py  0012_alter_country_neighbours.py  0013_alter_city_options_alternativename_active_and_more.py  0014_address_user.py  0014_alter_address_options_alter_city_options_and_more.py  0015_address_user_alter_address_created_and_more.py
geo/plugin/: postal_code_ca.py  reset_queries.py
geo/south_migrations/: 0001_initial.py
geo/utils/: __init__.py
payments/: admin.py  apps.py  choices.py  errors.py  forms.py  managers.py  models.py  object_types.py  schema.py  serializers.py  signals.py  tests.py  urls.py  views.py  viewsets.py
payments/gateways/: __init__.py
payments/graphene/: mutations.py  object_types.py
payments/migrations/: 0001_initial.py  0002_initial.py  0003_alter_transaction_balance.py  0004_alter_transaction_payment_method.py
payments/templates/: balance_deposit_email.html
payments/utils/: __init__.py  cbr.py  currencies.py  email.py  emailing.py
scripts/: environment.bat  environment.sh  generate_secrets.bat  generate_secrets.sh
storefront/: index.html  package-lock.json  package.json  vite.config.js
storefront/src/: App.vue  main.js
vibes_auth/: admin.py  apps.py  filters.py  forms.py  managers.py  models.py  object_types.py  schema.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  validators.py  views.py  viewsets.py
vibes_auth/graphene/: mutations.py  object_types.py
vibes_auth/migrations/: 0001_initial.py  0002_alter_user_activation_token.py  0002_blacklistedtoken_outstandingtoken.py  0003_alter_user_first_name_alter_user_last_name.py  0003_alter_user_language.py
vibes_auth/templates/: user_reset_password_email.html  user_verification_email.html
vibes_auth/utils/: db.py  email.py  emailing.py  geonames.py  lists.py  loyalty.py  rating.py  security.py  signals.py
(+269 files in other folders)
