[tool.poetry]
name = "eVibes"
version = "1.0.0"
description = "eVibes is an open-source eCommerce backend service built with Django. It’s designed for flexibility, making it ideal for various use cases and learning Django skills. The project is easy to customize, allowing for straightforward editing and extension."
authors = ["fureunoir <contact@fureunoir.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.2.0"
celery = {version = "^5.4.0", optional = true}
poetry-core = "^1.9.1"
pillow = "^11.0.0"
south = "^1.0.2"
pygraphviz = { version = "^1.13", optional = true }
requests = "^2.32.3"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
openai = {version = "^1.51.0", optional = true}
swapper = "^1.4.0"
sentry-sdk = {version = "^2.18.0", optional = true}
django = "5.1.3"
django-extensions = "^3.2.3"
graphene-django = "^3.0.0"
django-redis = "^5.4.0"
django-parler = "^2.3"
django-ratelimit = "^4.1.0"
django-hosts = "^6.0"
django-mptt = "^0.16.0"
django-filter = "^24.2"
django-constance = "^4.1.3"
django-mailbox = "^4.10.1"
django-jazzmin = "^3.0.1"
django-model-utils = "^5.0.0"
django-widget-tweaks = "^1.5.0"
django-cors-headers = "^4.6.0"
django-celery-beat = {version = "^2.6.0", optional = true}
django-json-widget = "^2.0.1"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = {extras = ["crypto"], version = "^5.3.1"}
djangorestframework-recursive = "^0.1.2"
djangorestframework-camel-case = "^1.4.2"
djangorestframework-xml = "^2.0.0"
drf-spectacular = {extras = ["sidecar"], version = "^0.27.2"}

[tool.poetry.extras]
graph = ["pygraphviz"]
worker = ["celery", "django-celery-beat"]
sentry = ["sentry-sdk"]
AI = ["openai"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"